<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="#fff"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="33dp"
        android:src="@mipmap/logo_login" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="46dp"
        android:background="@drawable/shape_login_input"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:src="@drawable/shouji_icon" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="23dp"
            android:background="#f0f0f0"
            android:hint="@string/input_phone"
            android:textColor="#333333"
            android:textColorHint="#bebebe"
            android:inputType="number"
            android:textSize="18sp" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_login_input"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/xinxi_icon" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_et_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="23dp"
            android:background="#f0f0f0"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:textColor="#333333"
            android:textColorHint="#bebebe"
            android:textSize="18sp" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#bebebe"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login_tv_get_verification_code"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:textSize="12sp"
            android:textColor="#ff5151"
            android:layout_marginEnd="23dp"
            android:text="@string/get_verification_code"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="38dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_retry"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login_tv_language_access_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/language_access_verification_code"
            android:textColor="#ff5151"
            android:textSize="12sp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_btn_login"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_login_btn"
        android:gravity="center"
        android:text="@string/into"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#eaeaea" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="0dp"
            android:text="@string/you_can"
            android:textColor="#bebebe"
            android:textSize="15sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#eaeaea" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_user_agreement"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_user_agreement"
            android:button="@null"
            android:checked="true" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login_tv_user_agreement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="#ff5151"
            android:textSize="13sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login_tv_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/password_login"
            android:textColor="#ff5151"
            android:textSize="13sp" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>
